test/sema/exercise/member_expr_nested_invalid.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
  n: S2
}

struct S2 {
  x: number
}

fn main(): unit {
  let s = S { x: 0, n: S2 { x: 1 } };

  let x = s.y.x;
  // CHECK: [[# @LINE - 1 ]]:12: error: 'S' has no field called 'y'
}
